grid layout 대략적인 구도 잡고, text 넣음.

--- a/CSS/10.12/10_12.css
+++ b/CSS/10.12/10_12.css
@@ -1,69 +1,75 @@
+body {
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	width: 100%;
+	height: 100vh;
+	text-align: center;
+}
+
+.title {
+	font-size: 70px;
+	margin-bottom: 20px;
+}
+
 .grid {
 	display: grid;
-	height: 500px;
-	width: 850px;
-	grid-template-columns: repeat(4, 2fr);
-	grid-template-rows: repeat(4, 2fr);
+	font-weight: bold;
+	grid-template-rows: repeat(4, minmax(max-content, 22vh));
+	grid-template-columns: repeat(4, minmax(max-content, 16vw));
 }
 
-.header {
-	background-color: #dae7de;
-	grid-column: span 2;
-	grid-row: span 2;
-	font-size: 3.5rem;
-	text-align: center;
-	line-height: 250px;
-	color: #ef5014;
+.grid > div:nth-child(1) {
+	background-color: #f0e5cf;
+	font-size: 1.3rem;
+	text-align: left;
+	padding: 10px;
 }
 
-.content {
-	background-color: #008a69;
-	grid-column: span 2;
-	grid-row: span 2;
-	font-size: 3.5rem;
-	text-align: center;
-	line-height: 250px;
-	color: #dae7de;
+.grid > div:nth-child(2) {
+	background-color: #c8c6c6;
 }
 
-.nav {
-	background-color: #ef5014;
-	grid-column: span 2;
-	grid-row: span 2;
-	font-size: 3.5rem;
-	text-align: center;
-	line-height: 250px;
-	color: #dae7de;
+.grid > div:nth-child(3) {
+	background-color: #e8f6ef;
 }
 
-.footer1 {
-	background-color: #f7abc5;
-	font-size: 30px;
-	text-align: center;
-	line-height: 125px;
-	color: #ef5014;
+.grid > div:nth-child(4) {
+	background-color: #b2b8a3;
 }
 
-.footer2 {
-	background-color: #5f5fa9;
-	font-size: 30px;
-	text-align: center;
-	line-height: 125px;
-	color: #dae7de;
+.grid > div:nth-child(5) {
+	background-color: #ffe194;
+	font-size: 1.1rem;
+	text-align: left;
+	padding: 10px;
 }
 
-.footer3 {
-	background-color: #ffc128;
-	font-size: 30px;
-	text-align: center;
-	line-height: 125px;
-	color: #ef5014;
+.grid > div:nth-child(6) {
 }
 
-.footer4 {
-	background-color: #f97374;
-	font-size: 30px;
-	text-align: center;
-	line-height: 125px;
-	color: #dae7de;
+.grid > div:nth-child(7) {
+	background-color: #e8f6ef;
+}
+
+.grid > div:nth-child(8) {
+	background-color: #b2b8a3;
+}
+
+.grid > div:nth-child(9) {
+	background-color: #ffe194;
+}
+
+.grid > div:nth-child(10) {
+	background-color: #deedf0;
+	font-size: 1.1rem;
+	text-align: left;
+	padding: 10px;
+}
+
+.grid > div:nth-child(11) {
+	background-color: #e8f6ef;
+}
+
+.grid > div:nth-child(12) {
+	background-color: #b2b8a3;
 }
