--- a/CSS/10.12/10_12.css
+++ b/CSS/10.12/10_12.css
@@ -14,8 +14,8 @@ body {
 .grid {
 	display: grid;
 	font-weight: bold;
-	grid-template-rows: repeat(4, minmax(max-content, 22vh));
-	grid-template-columns: repeat(4, minmax(max-content, 16vw));
+	grid-template-rows: repeat(3, minmax(max-content, 24vh));
+	grid-template-columns: repeat(4, minmax(max-content, 18vw));
 }
 
 .grid > div:nth-child(1) {
@@ -26,14 +26,18 @@ body {
 }
 
 .grid > div:nth-child(2) {
+	grid-row: 2/4;
 	background-color: #c8c6c6;
+	text-align: left;
+	padding: 10px;
 }
 
 .grid > div:nth-child(3) {
-	background-color: #e8f6ef;
+	background-color: #ffc904;
 }
 
 .grid > div:nth-child(4) {
+	grid-row: 2/3;
 	background-color: #b2b8a3;
 }
 
@@ -45,31 +49,14 @@ body {
 }
 
 .grid > div:nth-child(6) {
-}
-
-.grid > div:nth-child(7) {
-	background-color: #e8f6ef;
-}
-
-.grid > div:nth-child(8) {
-	background-color: #b2b8a3;
-}
-
-.grid > div:nth-child(9) {
-	background-color: #ffe194;
-}
-
-.grid > div:nth-child(10) {
-	background-color: #deedf0;
-	font-size: 1.1rem;
+	grid-row: 1/4;
 	text-align: left;
 	padding: 10px;
 }
 
-.grid > div:nth-child(11) {
+.grid > div:nth-child(7) {
+	grid-row: 1/4;
 	background-color: #e8f6ef;
-}
-
-.grid > div:nth-child(12) {
-	background-color: #b2b8a3;
+	text-align: left;
+	padding: 10px;
 }
