--- a/CSS/10.13/10_13.css
+++ b/CSS/10.13/10_13.css
@@ -1,9 +1,8 @@
 body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
 		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-	width: 100%;
+	width: 99%;
 	height: 100vh;
-	text-align: center;
 }
 
 .grid {
@@ -21,6 +20,7 @@ body {
 	color: orangered;
 	grid-column: 1/5;
 	height: 30px;
+	overflow: hidden;
 }
 
 .grid > div:nth-child(2) {
@@ -30,6 +30,8 @@ body {
 	text-orientation: upright;
 	font-size: 0.9rem;
 	width: 2.5vw;
+	vertical-align: middle;
+	text-align: center;
 }
 
 .grid > div:nth-child(3) {
@@ -37,7 +39,7 @@ body {
 	background-image: url("https://i.pinimg.com/564x/f8/7c/c9/f87cc97b4ec971c435c636a264844e1e.jpg");
 	grid-column: 2/3;
 	grid-row: 2/4;
-	width: 47vw;
+	width: 46.5vw;
 }
 
 .grid > div:nth-child(4) {
@@ -45,11 +47,22 @@ body {
 	background-image: url("https://i.pinimg.com/564x/c1/b7/a5/c1b7a522ac5dae0f3ef7fd14221e23cb.jpg");
 	grid-column: 3/4;
 	grid-row: 2/4;
-	width: 47vw;
+	width: 46.5vw;
 	height: 750px;
 }
 
 .grid > div:nth-child(5) {
+	padding: 20px 0 0 0;
+	text-align: center;
+	position: absolute;
+	margin: auto;
+	width: 300px;
+	font-size: 5rem;
+	color: #ffffff;
+	font-weight: 800;
+}
+
+.grid > div:nth-child(6) {
 	border-bottom: 2.5px solid orangered;
 	background-color: #42ad4b;
 	color: #ffffff;
@@ -59,7 +72,7 @@ body {
 	width: 2.5vw;
 }
 
-.grid > div:nth-child(6) {
+.grid > div:nth-child(7) {
 	background-color: #ffffff;
 	color: orangered;
 	transform: rotate(180deg);
@@ -69,7 +82,7 @@ body {
 	width: 2.5vw;
 }
 
-.grid > div:nth-child(7) {
+.grid > div:nth-child(8) {
 	background-color: #42ad4b;
 	color: #ffffff;
 	writing-mode: vertical-rl;
@@ -78,10 +91,11 @@ body {
 	width: 2.5vw;
 }
 
-.grid > div:nth-child(8) {
+.grid > div:nth-child(9) {
 	border-top: 2.5px solid orangered;
 	background-color: #ffffff;
 	color: orangered;
 	grid-column: 1/5;
 	height: 30px;
+	overflow: hidden;
 }
