--- a/CSS/10.14/10_14.css
+++ b/CSS/10.14/10_14.css
@@ -1,7 +1,7 @@
 body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
 		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-	width: 99%;
+	width: 98%;
 	height: 100vh;
 }
 
@@ -20,11 +20,80 @@ select {
 
 .box {
 	display: grid;
-	grid-template-columns: repeat(3, minmax(auto, auto));
+	grid-template-columns: repeat(3, minmax(33.3%, 33.3%));
 	grid-template-rows: repeat(3, minmax(auto, auto));
 }
 
 .info {
-	height: 150px;
+	height: 250px;
 	border: 1.5px solid black;
+}
+
+.space {
+	margin: 15px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.info > div:nth-child(1) {
+	height: 18vh;
+	width: 25vw;
+	background-image: url("https://i.pinimg.com/564x/c1/b7/a5/c1b7a522ac5dae0f3ef7fd14221e23cb.jpg");
+	margin: auto;
+}
+
+.info > div:nth-child(2) {
+	height: 18vh;
+	width: 25vw;
+	background-image: url("https://i.pinimg.com/564x/c1/b7/a5/c1b7a522ac5dae0f3ef7fd14221e23cb.jpg");
+	margin: auto;
+}
+
+.info > div:nth-child(3) {
+	height: 18vh;
+	width: 25vw;
+	background-image: url("https://i.pinimg.com/564x/c1/b7/a5/c1b7a522ac5dae0f3ef7fd14221e23cb.jpg");
+	margin: auto;
+}
+
+.info > div:nth-child(4) {
+	height: 18vh;
+	width: 25vw;
+	background-image: url("https://i.pinimg.com/564x/c1/b7/a5/c1b7a522ac5dae0f3ef7fd14221e23cb.jpg");
+	margin: auto;
+}
+
+.info > div:nth-child(5) {
+	height: 18vh;
+	width: 25vw;
+	background-image: url("https://i.pinimg.com/564x/c1/b7/a5/c1b7a522ac5dae0f3ef7fd14221e23cb.jpg");
+	margin: auto;
+}
+
+.info > div:nth-child(6) {
+	height: 18vh;
+	width: 25vw;
+	background-image: url("https://i.pinimg.com/564x/c1/b7/a5/c1b7a522ac5dae0f3ef7fd14221e23cb.jpg");
+	margin: auto;
+}
+
+.info > div:nth-child(7) {
+	height: 18vh;
+	width: 25vw;
+	background-image: url("https://i.pinimg.com/564x/c1/b7/a5/c1b7a522ac5dae0f3ef7fd14221e23cb.jpg");
+	margin: auto;
+}
+
+.info > div:nth-child(8) {
+	height: 18vh;
+	width: 25vw;
+	background-image: url("https://i.pinimg.com/564x/c1/b7/a5/c1b7a522ac5dae0f3ef7fd14221e23cb.jpg");
+	margin: auto;
+}
+
+.info > div:nth-child(9) {
+	height: 18vh;
+	width: 25vw;
+	background-image: url("https://i.pinimg.com/564x/c1/b7/a5/c1b7a522ac5dae0f3ef7fd14221e23cb.jpg");
+	margin: auto;
 }
