--- a/CSS/10.15/10_15.css
+++ b/CSS/10.15/10_15.css
@@ -61,9 +61,10 @@ body {
 	width: 25vw;
 	grid-column: 4/7;
 	grid-row: 1/9;
-	background-image: url("https://minutes.co/wp-content/uploads/2019/10/virtual-office.jpg");
+	background-image: url("https://www.telkomsel.com/sites/default/files/asset/fullhtml/img/gallery/telkomsel/255385441.jpg");
+
 	background-repeat: no-repeat;
-	background-size: auto;
+	background-size: cover;
 }
 
 .grid > div:nth-child(3) {
@@ -79,7 +80,7 @@ body {
 .grid > div:nth-child(4) {
 	border-right: 3px solid black;
 	border-bottom: 3px solid black;
-	background-image: url("https://prodmediacdn.blob.core.windows.net/media/2020/06/landscape_vp4_630x449_0000s_0007_GettyImages-514410153.jpg.jpg");
+	background-image: url("https://acutec.b-cdn.net/wp-content/uploads/2019/05/difference-microsoft-365-office-365-e1601991663664.jpg");
 	grid-column: 7/9;
 	grid-row: 5/7;
 	background-repeat: no-repeat;
@@ -88,7 +89,8 @@ body {
 
 .grid > div:nth-child(5) {
 	border-bottom: 3px solid black;
-	background-image: url("https://www.cnet.com/a/img/3l0pi8UGY1EwaX_MSMtGkOZyDeE=/1092x614/2017/12/06/8e69faf0-18b4-43d4-bea7-3e035d4517d3/office365-worker-1600.jpg");
+	background-image: url("https://assets-news.housing.com/news/wp-content/uploads/2019/02/13152538/Vastu-tips-for-office-to-bring-prosperity-at-work-FB-1200x700-compressed.jpg");
+
 	grid-column: 9/10;
 	grid-row: 5/6;
 	background-repeat: no-repeat;
@@ -97,7 +99,7 @@ body {
 
 .grid > div:nth-child(6) {
 	border-bottom: 3px solid black;
-	background-image: url("https://www.telkomsel.com/sites/default/files/asset/fullhtml/img/gallery/telkomsel/255385441.jpg");
+	background-image: url("https://minutes.co/wp-content/uploads/2019/10/virtual-office.jpg");
 	grid-column: 9/10;
 	grid-row: 6/7;
 	background-repeat: no-repeat;
@@ -107,7 +109,8 @@ body {
 .grid > div:nth-child(7) {
 	border-right: 3px solid black;
 	border-bottom: 3px solid black;
-	background-image: url("https://www.dmv.ca.gov/portal/wp-content/themes/dmv/dist/images/illustrations/teen_desk.svg");
+	background-image: url("https://www.ikea.com/kr/en/images/products/alefjaell-office-chair-grann-golden-brown__0854227_pe709348_s5.jpg?f=m");
+
 	grid-column: 7/8;
 	grid-row: 7/9;
 	background-repeat: no-repeat;
@@ -135,7 +138,8 @@ body {
 	border-right: 3px solid black;
 	grid-column: 4/5;
 	grid-row: 9/11;
-	background-image: url("https://www.zohowebstatic.com/sites/default/files/office/zoho-office-suite-header.png");
+
+	background-image: url("https://www.thelocal.de/wp-content/uploads/2021/06/239044026-2-646x431.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -146,7 +150,8 @@ body {
 	border-bottom: 3px solid black;
 	grid-column: 5/6;
 	grid-row: 9/10;
-	background-image: url("https://www.microsoft.com/en-us/microsoft-365/blog/uploads/prod/sites/2/2021/09/SEC20_Security_018-1200x600.jpg");
+
+	background-image: url("https://www.intelligenthq.com/wp-content/uploads/2019/10/working-from-home-1068x713.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -156,7 +161,8 @@ body {
 	border-right: 3px solid black;
 	grid-column: 5/6;
 	grid-row: 10/11;
-	background-image: url("https://www.thelocal.de/wp-content/uploads/2021/06/239044026-2-646x431.jpg");
+
+	background-image: url("https://www.dmv.ca.gov/portal/wp-content/themes/dmv/dist/images/illustrations/teen_desk.svg");
 	background-repeat: no-repeat;
 	background-size: cover;
 }
@@ -164,7 +170,7 @@ body {
 .grid > div:nth-child(13) {
 	grid-column: 6/10;
 	grid-row: 9/11;
-	background-image: url("https://acutec.b-cdn.net/wp-content/uploads/2019/05/difference-microsoft-365-office-365-e1601991663664.jpg");
+	background-image: url("https://www.zohowebstatic.com/sites/default/files/office/zoho-office-suite-header.png");
 	background-repeat: no-repeat;
 	background-size: cover;
 }
