--- a/CSS/10.15/10_15.css
+++ b/CSS/10.15/10_15.css
@@ -2,7 +2,7 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
 		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 	width: 98%;
-	height: 100vh;
+	height: 98vh;
 	display: flex;
 	border: 3px solid black;
 }
@@ -32,7 +32,8 @@ body {
 }
 
 .footer {
-	margin-top: 100px;
+	position: fixed;
+	bottom: 10px;
 }
 
 .footer > div {
